kubeflow/helm/pipelines/upstream-1.8/apiserver/ml-pipeline_AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/ml-pipeline
              - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
              - cluster.local/ns/kubeflow/sa/ml-pipeline-persistenceagent
              - cluster.local/ns/kubeflow/sa/ml-pipeline-scheduledworkflow
              - cluster.local/ns/kubeflow/sa/ml-pipeline-viewer-crd-service-account
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache
    - when:
        - key: request.headers[kubeflow-userid]
          notValues:
            - '*'
  selector:
    matchLabels:
      app: ml-pipeline
